--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
-From: <Saved by Blink>
-Snapshot-Content-Location: https://moodle.ut.ee/pluginfile.php/1678919/mod_resource/content/4/index.html
-Subject: =?utf-8?Q?Lehe=20p=C3=A4is?=
-Date: Tue, 22 Oct 2024 17:07:36 +0300
-MIME-Version: 1.0
-Content-Type: multipart/related;
-	type="text/html";
-	boundary="----MultipartBoundary--ge6tMl1XehlyV4cmNuD9kSOEhkkPym6KXrJklDiw62----"
+<!DOCTYPE html>
 
+<html>
 
-------MultipartBoundary--ge6tMl1XehlyV4cmNuD9kSOEhkkPym6KXrJklDiw62----
-Content-Type: text/html
-Content-ID: <frame-06CF91A6D48DF1BAB37C138CE4CAFE7E@mhtml.blink>
-Content-Transfer-Encoding: quoted-printable
-Content-Location: https://moodle.ut.ee/pluginfile.php/1678919/mod_resource/content/4/index.html
-
-<!DOCTYPE html><html><head><meta http-equiv=3D"Content-Type" content=3D"tex=
-t/html; charset=3DUTF-8">
-<title>Lehe p=C3=A4is</title>
+<head>
+	<meta http-equiv=3D"Content-Type" content=3D"tex=t/html; charset=3DUTF-8">
+	<title>Lehe p=C3=A4is</title>
 </head>
 <body>
 
-<h1>Esimese taseme pealkiri</h1>
-<p>Tekstil=C3=B5ik</p>
-
-
-
-</body></html>
-------MultipartBoundary--ge6tMl1XehlyV4cmNuD9kSOEhkkPym6KXrJklDiw62------
+	<h1>Kalastamine</h1>
+	<p>Kalastamine on kalanduse haru, mis keskendub kalade ja teiste veeorganismide, näiteks veetaimede ja vähkide, püügile veekogudest harrastuslikul eesmärgil. See hõlmab ka kõikvõimalikke kalapüügivahendeid ja vastavaid -tehnikaid.</p>
+	<br>
+	<a href="https://kalastusinfo.ee/kalastamine/kalastuskaart/">Kliki siia, et edasi lugeda</a>
+	
+	<img src="https://i.pinimg.com/originals/8d/1d/2a/8d1d2a22112399f52fe2a1afc31cf34a.jpg" alt="See on näidispilt, minu sisemaailmast ja mõtetest rn" width="400" height="300">
+	
+	<a href="teineleht.html">Uuri rohkemat, klikates siia</a>
+	<br>
+	<h2>Põhipunktid kalastamisest:</h2>
+	<ol>
+		<li>Milleks on kalastamine kasulik:
+			<ol>
+				<li>Toob raha majandusse, me kõik vajame süüa ja omega3 rasvhappeid</li>
+				<li>hea ajaviide laupäevasel päeval kell 5 hommikul</li>
+			</ol>
+		</li>
+		<li>Miks see on kahjulik:
+			<ol>
+				<li>kalad saavad otsa</li>
+				<li>delfiinid surevad</li>
+			</ol>
+		</li>
+	</ol>
+</body>
+</html>
