--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 
 <head>
 	<meta http-equiv=3D"Content-Type" content=3D"tex=t/html; charset=3DUTF-8">
-	<title>Lehe p=C3=A4is</title>
+	<title>Lehe p=C3=A4is</title>ˇ
+
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<script src="..\[folder_name]\[file_name].js"></script>
+	<script src="[file_name].js"></script>
+	<script src="[url_of_the_js_library]"></script>
 </head>
 <body>
 
